--- a/src/Components/Pages/page1.scss
+++ b/src/Components/Pages/page1.scss
@@ -1,31 +1,91 @@
+@import "../../Data/themeColorConfig.scss";
+
 #theme-light {
-    height: 100%;
     .Page1 {
-        height: 100%;
-        background-color: #79a3b1;
+        background-color: $--theme-light-secondary;
+
         .users-highlight-style {
-            display: flex;
-            flex-wrap: wrap;
+            .users-container {
+                &::-webkit-scrollbar-thumb {
+                    background: $--theme-light-quinary;
+                }
 
-            .arrowIcon-left {
-                position: absolute;
-                z-index: 2;
-                margin-top: 110px;
-                font-size: 35px;
-                opacity: 0.5;
-                left: 10px;
-                cursor: pointer;
+                .user-card {
+                    color: $--theme-light-quaternary;
+                    background-color: $--theme-light-primary;
+                }
             }
+        }
 
-            .arrowIcon-right {
-                position: absolute;
-                z-index: 2;
-                margin-top: 110px;
-                right: 10px;
-                font-size: 35px;
-                opacity: 0.5;
-                cursor: pointer;
+        .users-page-style {
+            .users-container {
+                .user-card {
+                    color: white;
+                    background-color: $--theme-light-quaternary;
+                }
             }
+        }
+    }
+}
+
+#theme-dark {
+    .Page1 {
+        background-color: $--theme-dark-secondary;
+
+        .users-highlight-style {
+            .users-container {
+                &::-webkit-scrollbar-thumb {
+                    background: $--theme-dark-quinary;
+                }
+
+                .user-card {
+                    color: $--theme-dark-quaternary;
+                    background-color: $--theme-dark-primary;
+                }
+            }
+        }
+
+        .users-page-style {
+            .users-container {
+                &::-webkit-scrollbar-thumb {
+                    background: $--theme-light-quinary;
+                }
+
+                .user-card {
+                    color: $--theme-light-quaternary;
+                    background-color: $--theme-light-primary;
+                }
+            }
+        }
+    }
+}
+
+.Page1 {
+    min-height: calc(100vh - 100px);
+    height: 100%;
+
+    .users-highlight-style {
+        display: flex;
+        flex-wrap: wrap;
+
+        .arrowIcon-left {
+            position: absolute;
+            z-index: 2;
+            margin-top: 110px;
+            font-size: 35px;
+            opacity: 0.5;
+            left: 10px;
+            cursor: pointer;
+        }
+
+        .arrowIcon-right {
+            position: absolute;
+            z-index: 2;
+            margin-top: 110px;
+            right: 10px;
+            font-size: 35px;
+            opacity: 0.5;
+            cursor: pointer;
         }
 
         .users-container {
@@ -44,7 +104,6 @@
             }
 
             &::-webkit-scrollbar-thumb {
-                background: #fcf8ec;
                 border-radius: 10px;
             }
 
@@ -52,8 +111,6 @@
                 min-width: 240px;
                 text-shadow: 2px 2px 4px #000000;
                 box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                color: #fcf8ec;
-                background-color: #98d2c2;
                 border-radius: 15px 50px 30px;
                 height: 160px;
                 text-align: center;
@@ -82,86 +139,104 @@
             }
         }
     }
-}
 
-#theme-dark {
-    .Page1 {
-        background-color: #f582a7;
-        .users-highlight-style {
-            display: flex;
-            flex-wrap: wrap;
-
-            .arrowIcon-left {
-                position: absolute;
-                z-index: 2;
-                margin-top: 110px;
-                font-size: 35px;
-                opacity: 0.5;
-                left: 10px;
-                cursor: pointer;
-            }
-
-            .arrowIcon-right {
-                position: absolute;
-                z-index: 2;
-                margin-top: 110px;
-                right: 10px;
-                font-size: 35px;
-                opacity: 0.5;
-                cursor: pointer;
-            }
-        }
+    .users-page-style {
+        display: flex;
+        justify-content: center;
 
         .users-container {
+            display: grid;
+            grid-template-columns: repeat(2, 100vmin);
+            place-items: center;
+            row-gap: 30px;
+        }
+
+        .user-card {
+            min-width: 500px;
+            text-shadow: 2px 2px 4px #000000;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            border-radius: 50px;
+            height: 360px;
+            text-align: center;
+            padding: 10px;
+            margin-right: 10px;
             display: flex;
+            justify-content: space-evenly;
+            flex-direction: column;
+            transition: 0.4s ease-in-out;
             position: relative;
-            overflow-x: auto;
-            overflow-y: hidden;
-            margin: 30px;
-            padding: 20px;
-            scroll-behavior: smooth;
 
-            &::-webkit-scrollbar {
-                border-radius: 10px;
-                height: 10px;
-                width: 8px;
+            &:hover {
+                transform: translateY(20px);
+                .user-info {
+                    opacity: 1;
+                    transform: translateY(0px);
+                }
+                .user-name {
+                    opacity: 0;
+                }
+                .user-thumbnail-container .user-thumbnail {
+                    transform: translateX(-100%);
+                    z-index: 5 !important;
+                }
+                &::before {
+                    opacity: 1;
+                }
             }
+            &:before {
+                content: "";
+                position: absolute;
+                border-radius: 50px;
+                top: 0;
+                left: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
 
-            &::-webkit-scrollbar-thumb {
-                background: black;
-                border-radius: 10px;
+                background: rgba(black, 0.6);
+                z-index: 2;
+                transition: 0.5s;
+                opacity: 0;
             }
-
-            .user-card {
-                min-width: 240px;
-                text-shadow: 2px 2px 4px #000000;
+            .user-thumbnail-container .user-thumbnail {
                 box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                color: #f10086;
-                background-color: black;
-                border-radius: 15px 50px 30px;
-                height: 160px;
-                text-align: center;
-                padding: 10px;
-                margin-right: 10px;
+                border-radius: 50%;
+                transform: translateX(0);
+                transition: 0.5s;
+            }
+
+            .user-name {
                 display: flex;
                 justify-content: center;
-                flex-direction: column;
-
-                .user-thumbnail-container .user-thumbnail {
-                    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                    border-radius: 50%;
+                overflow: hidden;
+                font-size: 36px;
+                font-weight: bold;
+                opacity: 1;
+                transition: 0.5s;
+                .title {
+                    margin-right: 10px;
                 }
+                .first {
+                    margin-right: 5px;
+                }
+            }
 
-                .user-name {
-                    display: flex;
-                    justify-content: center;
-                    overflow: hidden;
-                    .title {
-                        margin-right: 10px;
-                    }
-                    .first {
-                        margin-right: 5px;
-                    }
+            .user-info {
+                position: absolute;
+                display: flex;
+                width: 100%;
+                justify-content: center;
+                flex-direction: column;
+                z-index: 3;
+                color: white;
+                opacity: 0;
+                transform: translateY(30px);
+                transition: 0.5s;
+                > div {
+                    margin: 0px;
+                    letter-spacing: 1px;
+                    font-size: 15px;
+                    margin-top: 8px;
                 }
             }
         }
