--- a/src/Components/Pages/Navigation.scss
+++ b/src/Components/Pages/Navigation.scss
@@ -41,7 +41,11 @@
 }
 
 .navbar {
+    position: fixed;
+    top: 0;
     height: 100px;
+    width: 100%;
+    z-index: 2;
     display: grid;
     grid-template-columns: 2fr 3fr 2fr;
     > div {
